added lobby endpoint
