# api/api.go
@@ -47,27 +47,6 @@ func NewAPIServer(config *config.Config, db db.DB) *Server {
 	}
 }
 
-func (s *Server) Run() error {
-	userRouter := http.NewServeMux()
-	userRouter.HandleFunc("GET /", func(w http.ResponseWriter, r *http.Request) {
-		w.Write([]byte("GET /v1/user"))
-	})
-	userRouter.HandleFunc("GET /{username}", func(w http.ResponseWriter, r *http.Request) {
-		w.Write([]byte("GET /v1/user/{username}"))
-	})
-
-	v1 := http.NewServeMux()
-	v1.Handle("/user/{pathname...}", http.StripPrefix("/user", userRouter))
-
-	main := http.NewServeMux()
-	main.Handle("/v1/", http.StripPrefix("/v1", v1))
-
-	server := &http.Server{ Addr: "localhost:5000", Handler: main }
-	server.ListenAndServe()
-
-	return nil
-}
-
 //	@title			CodeDuel API
 //	@version		1.0
 //	@description	Backend API for CodeDuel
@@ -92,31 +71,34 @@ func (s *Server) Run() error {
 
 // @host		localhost:5000
 // @schemes	http
-func (s *Server) RunOld() error {
+func (s *Server) Run() error {
 	v1 := http.NewServeMux()
-	v1.Handle("/user", s.GetUserRouter())
-	v1.Handle("/user/", s.GetUserRouter())
+	v1.Handle("/user", http.StripPrefix("/user", s.GetUserRouter()))
+	v1.Handle("/user/", http.StripPrefix("/user", s.GetUserRouter()))
+	v1.Handle("/lobby", http.StripPrefix("/lobby", s.GetLobbyRouter()))
+	v1.Handle("/lobby/", http.StripPrefix("/lobby", s.GetLobbyRouter()))
 	v1.Handle("/challenge", http.StripPrefix("/challenge", s.GetChallengeRouter()))
 	v1.Handle("/challenge/", http.StripPrefix("/challenge", s.GetChallengeRouter()))
 	v1.Handle("/auth/github", http.StripPrefix("/auth/github", s.GetGithubAuthRouter()))
 	v1.Handle("/auth/github/", http.StripPrefix("/auth/github", s.GetGithubAuthRouter()))
 
 	main := http.NewServeMux()
-	// main.HandleFunc("/v1", makeHTTPHandleFunc(s.handleRoot))
+	main.HandleFunc("/v1", makeHTTPHandleFunc(s.handleRoot))
 	main.HandleFunc("/health", makeHTTPHandleFunc(s.handleHealth))
 	main.HandleFunc("POST /validateToken", makeHTTPHandleFunc(s.handleValidateToken)) // TODO: make it accessible only by lobby service
-	main.HandleFunc("/docs/", httpSwagger.Handler(httpSwagger.URL("http://"+s.address+"/docs/doc.json")))
+	// main.HandleFunc("/docs/", httpSwagger.Handler(httpSwagger.URL("http://"+s.address+"/docs/doc.json")))
+	main.HandleFunc("/docs/", httpSwagger.Handler())
 	main.Handle("/v1/", http.StripPrefix("/v1", v1))
 	
-	server := &http.Server{
-		Addr:    fmt.Sprintf("%s:%s", s.config.Host, s.config.PortHttp),
-		Handler: ChainMiddleware(CorsMiddleware, LoggingMiddleware)(main),
-	}
-
 	serverSSL := &http.Server{
 		Addr:    s.address,
 		Handler: ChainMiddleware(CorsMiddleware, LoggingMiddleware)(main),
 		TLSConfig: &tls.Config{},
+	}
+
+	server := &http.Server{
+		Addr:    fmt.Sprintf("%s:%s", s.config.Host, s.config.PortHttp),
+		Handler: ChainMiddleware(CorsMiddleware, LoggingMiddleware)(main),
 	}
 
 	var wg sync.WaitGroup
@@ -125,6 +107,7 @@ func (s *Server) RunOld() error {
 	go func() {
 		log.Printf("%s HTTPS server starting...", utils.GetLogTag("info"))
 		err := serverSSL.ListenAndServeTLS(s.config.SSLCert, s.config.SSLKey)
+
 		if err != nil && !errors.Is(err, http.ErrServerClosed) {
 			log.Printf("%s failed to start HTTPS server: %s", utils.GetLogTag("error"), err.Error())
 		} else if errors.Is(err, http.ErrServerClosed) {
@@ -139,6 +122,7 @@ func (s *Server) RunOld() error {
 	go func() {
 		log.Printf("%s HTTP server starting...", utils.GetLogTag("info"))
 		err := server.ListenAndServe()
+
 		if err != nil && !errors.Is(err, http.ErrServerClosed) {
 			log.Printf("%s failed to start HTTP server: %s", utils.GetLogTag("error"), err.Error())
 		} else if errors.Is(err, http.ErrServerClosed) {
