# docs/swagger.json
@@ -254,6 +254,83 @@
                 }
             }
         },
+        "/v1/lobby": {
+            "post": {
+                "description": "Create a new lobby and add it to the database",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "lobby"
+                ],
+                "summary": "Create a new lobby",
+                "parameters": [
+                    {
+                        "description": "Create Lobby Request",
+                        "name": "lobby",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.CreateLobbyRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.Lobby"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/lobby/{id}": {
+            "put": {
+                "description": "Update lobby",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "lobby"
+                ],
+                "summary": "Update lobby",
+                "parameters": [
+                    {
+                        "description": "Update Lobby Request",
+                        "name": "lobby",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.UpdateLobbyRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.Lobby"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/user": {
             "get": {
                 "description": "Get all users from the database",
@@ -549,6 +626,14 @@
                 }
             }
         },
+        "types.CreateLobbyRequest": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
         "types.CreateUserRequest": {
             "type": "object",
             "properties": {
@@ -557,6 +642,14 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "types.Lobby": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
                 }
             }
         },
@@ -612,6 +705,14 @@
                 },
                 "title": {
                     "type": "string"
+                }
+            }
+        },
+        "types.UpdateLobbyRequest": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
                 }
             }
         },
